--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:theme="@style/Theme.MediaPlayer"
         tools:targetApi="31">
         <activity
+            android:name=".ui.VideoPlayerFolder.VideoPlayer"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AudioPlayer.MusicPlayerActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
